--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             background-color: #d01379;
         }
         .main-container {
-            max-width: 450px;
+            max-width: 90%;
+            width: 450px;
         }
         /* Glassmorphism effect */
         .glass-container {
@@ -46,6 +47,12 @@
         }
         .animate-fade-in {
             animation: fadeIn 1s ease-out forwards;
+        }
+        @media (min-width: 640px) {
+            .main-container {
+                max-width: 450px;
+                width: 100%;
+            }
         }
     </style>
 </head>
